--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Bradshow/Python-Data-Analysis-Script"
+    "url": "https://github.com/Bradshow/Python-Data-Analysis-Script"
   },
   "keywords": [
     "python",
